# types-pefile

./: .gitignore  LICENSE  LICENSE.pefile  README.md  generate_lookup_types.py  mypy.ini  pyproject.toml  setup.py  stubtest.allowlist
ordlookup-stubs/: __init__.pyi  oleaut32.pyi  ws2_32.pyi
ordlookup-stubs/_generated/: oleaut32.pyi  ws2_32.pyi
pefile-stubs/: __init__.pyi
pefile-stubs/_generated/: pefile_formats.pyi  pefile_lookup.pyi  ws2_32.pyi
pefile-stubs/ordlookup/: __init__.pyi  oleaut32.pyi  ws2_32.pyi
